Renombrar archivos a minúsculas para compatibilidad con GitHub Pages
GitHub Pages es case-sensitive. Renombrados:
- Diplomados.html -> diplomados.html
- Aula virtual.html -> aula-virtual.html
- DIPLOMADOS/ -> diplomados-img/

--- a/diplomados.html
+++ b/diplomados.html
@@ -1150,7 +1150,7 @@
                 <!-- Diplomado 1: Medicina Legal -->
                 <div class="diplomado-card" data-category="medicina" data-title="DIPLOMADO MEDICINA LEGAL Y CIENCIAS FORENSES">
                     <div class="diplomado-header">
-                        <img src="DIPLOMADOS/1.jpg" alt="Medicina Legal">
+                        <img src="diplomados-img/1.jpg" alt="Medicina Legal">
                         <div class="diplomado-overlay">
                             <span class="diplomado-category">Medicina</span>
                             <h3 class="diplomado-title">DIPLOMADO MEDICINA LEGAL Y CIENCIAS FORENSES</h3>
@@ -1224,7 +1224,7 @@
                 <!-- Diplomado 3: Emergencias Médicas -->
                 <div class="diplomado-card" data-category="medicina" data-title="DIPLOMADO EN EMERGENCIAS Y URGENCIAS MEDICAS">
                     <div class="diplomado-header">
-                        <img src="DIPLOMADOS/3.jpg" alt="Emergencias Médicas">
+                        <img src="diplomados-img/3.jpg" alt="Emergencias Médicas">
                         <div class="diplomado-overlay">
                             <span class="diplomado-category">Medicina</span>
                             <h3 class="diplomado-title">DIPLOMADO EN EMERGENCIAS Y URGENCIAS MEDICAS</h3>
@@ -1261,7 +1261,7 @@
                 <!-- Diplomado 4: Ecografía -->
                 <div class="diplomado-card" data-category="medicina" data-title="DIPLOMADO EN ECOGRAFÍA GENERAL Y VELOCIMETRÍA DOPPLER">
                     <div class="diplomado-header">
-                        <img src="DIPLOMADOS/4.jpg" alt="Ecografía">
+                        <img src="diplomados-img/4.jpg" alt="Ecografía">
                         <div class="diplomado-overlay">
                             <span class="diplomado-category">Medicina</span>
                             <h3 class="diplomado-title">DIPLOMADO EN ECOGRAFÍA GENERAL Y VELOCIMETRÍA DOPPLER</h3>
@@ -1335,7 +1335,7 @@
                 <!-- Diplomado 6: Tesis -->
                 <div class="diplomado-card" data-category="investigacion" data-title="DIPLOMADO EN ASESORIA Y ELABORACIÓN DE TESIS EN SALUD">
                     <div class="diplomado-header">
-                        <img src="DIPLOMADOS/6.jpg" alt="Tesis en Salud">
+                        <img src="diplomados-img/6.jpg" alt="Tesis en Salud">
                         <div class="diplomado-overlay">
                             <span class="diplomado-category">Investigación</span>
                             <h3 class="diplomado-title">DIPLOMADO EN ASESORÍA Y ELABORACIÓN DE TESIS EN SALUD</h3>
@@ -1372,7 +1372,7 @@
                 <!-- Diplomado 7: SSOMA -->
                 <div class="diplomado-card" data-category="seguridad" data-title="DIPLOMADO EN SEGURIDAD, SALUD OCUPACIONAL Y MEDIO AMBIENTE SSOMA">
                     <div class="diplomado-header">
-                        <img src="DIPLOMADOS/7.jpg" alt="SSOMA">
+                        <img src="diplomados-img/7.jpg" alt="SSOMA">
                         <div class="diplomado-overlay">
                             <span class="diplomado-category">Seguridad</span>
                             <h3 class="diplomado-title">DIPLOMADO EN SEGURIDAD, SALUD OCUPACIONAL Y MEDIO AMBIENTE</h3>
