--- a/login.html
+++ b/login.html
@@ -886,7 +886,7 @@
 
                     // Redirigir al aula virtual con countdown
                     setTimeout(function() {
-                        window.location.href = 'Aula virtual.html?redirect=' + encodeURIComponent(result.link);
+                        window.location.href = 'aula-virtual.html?redirect=' + encodeURIComponent(result.link);
                     }, 2500);
                 } else {
                     mostrarAlerta(result.mensaje || result.error || 'Error desconocido', 'error');
