Configurar API_URL del Aula Virtual con deployment de Apps Script

--- a/cursos.html
+++ b/cursos.html
@@ -641,7 +641,7 @@
         // CONFIGURACION API REST
         // ============================================================
         // IMPORTANTE: Pega aqui la URL de tu deployment de Apps Script
-        var API_URL = 'PEGAR_URL_DEL_DEPLOYMENT_AQUI';
+        var API_URL = 'https://script.google.com/macros/s/AKfycbxwzymlbFFt3Eu2xF_yfZtIuXzqoThpHvLh5R0ICTii4GfYD7QmL3ypc3KfMp_4B9pz1g/exec';
 
         // ============================================================
         // HELPERS PARA COMUNICACION CON API
